# BackUp

./: CMakeLists.txt  Makefile  contour_reading.sh  readme.md  rebuild.sh  requirement.txt  tess_reading.sh  tess_train.sh
src/DataPreparing/: CMakeLists.txt  data_preparing.cpp
src/DrawingContour/: CMakeLists.txt  drawing_contour.cpp
src/TessReading/: CMakeLists.txt  tess_reading.cpp
src/python/: dataset_generaotor.py  img_preprocess.py  train_test_split.py
